Wikipedia/helper/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SECOND
    SKIPTAG

Grammar

Rule 0     S' -> start
Rule 1     start -> content_section
Rule 2     content_section -> FIRST content_items
Rule 3     content_items -> content_item content_items
Rule 4     content_items -> content_item
Rule 5     content_item -> contents
Rule 6     content_item -> FIRST
Rule 7     content_item -> link
Rule 8     contents -> CONTENT
Rule 9     link -> OPENHREF CONTENT CLOSEHREF
Rule 10    link -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
Rule 11    link -> OPENHREF CONTENT CONTENT CLOSEHREF
Rule 12    link -> OPENHREF CLOSEHREF

Terminals, with rules where they appear

CLOSEHREF            : 9 10 11 12
CONTENT              : 8 9 10 10 10 11 11
FIRST                : 2 6
OPENHREF             : 9 10 11 12
SECOND               : 
SKIPTAG              : 
error                : 

Nonterminals, with rules where they appear

content_item         : 3 4
content_items        : 2 3
content_section      : 1
contents             : 5
link                 : 7
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . content_section
    (2) content_section -> . FIRST content_items

    FIRST           shift and go to state 3

    start                          shift and go to state 1
    content_section                shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> content_section .

    $end            reduce using rule 1 (start -> content_section .)


state 3

    (2) content_section -> FIRST . content_items
    (3) content_items -> . content_item content_items
    (4) content_items -> . content_item
    (5) content_item -> . contents
    (6) content_item -> . FIRST
    (7) content_item -> . link
    (8) contents -> . CONTENT
    (9) link -> . OPENHREF CONTENT CLOSEHREF
    (10) link -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (11) link -> . OPENHREF CONTENT CONTENT CLOSEHREF
    (12) link -> . OPENHREF CLOSEHREF

    FIRST           shift and go to state 4
    CONTENT         shift and go to state 9
    OPENHREF        shift and go to state 10

    content_items                  shift and go to state 5
    content_item                   shift and go to state 6
    contents                       shift and go to state 7
    link                           shift and go to state 8

state 4

    (6) content_item -> FIRST .

    FIRST           reduce using rule 6 (content_item -> FIRST .)
    CONTENT         reduce using rule 6 (content_item -> FIRST .)
    OPENHREF        reduce using rule 6 (content_item -> FIRST .)
    $end            reduce using rule 6 (content_item -> FIRST .)


state 5

    (2) content_section -> FIRST content_items .

    $end            reduce using rule 2 (content_section -> FIRST content_items .)


state 6

    (3) content_items -> content_item . content_items
    (4) content_items -> content_item .
    (3) content_items -> . content_item content_items
    (4) content_items -> . content_item
    (5) content_item -> . contents
    (6) content_item -> . FIRST
    (7) content_item -> . link
    (8) contents -> . CONTENT
    (9) link -> . OPENHREF CONTENT CLOSEHREF
    (10) link -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (11) link -> . OPENHREF CONTENT CONTENT CLOSEHREF
    (12) link -> . OPENHREF CLOSEHREF

    $end            reduce using rule 4 (content_items -> content_item .)
    FIRST           shift and go to state 4
    CONTENT         shift and go to state 9
    OPENHREF        shift and go to state 10

    content_item                   shift and go to state 6
    content_items                  shift and go to state 11
    contents                       shift and go to state 7
    link                           shift and go to state 8

state 7

    (5) content_item -> contents .

    FIRST           reduce using rule 5 (content_item -> contents .)
    CONTENT         reduce using rule 5 (content_item -> contents .)
    OPENHREF        reduce using rule 5 (content_item -> contents .)
    $end            reduce using rule 5 (content_item -> contents .)


state 8

    (7) content_item -> link .

    FIRST           reduce using rule 7 (content_item -> link .)
    CONTENT         reduce using rule 7 (content_item -> link .)
    OPENHREF        reduce using rule 7 (content_item -> link .)
    $end            reduce using rule 7 (content_item -> link .)


state 9

    (8) contents -> CONTENT .

    FIRST           reduce using rule 8 (contents -> CONTENT .)
    CONTENT         reduce using rule 8 (contents -> CONTENT .)
    OPENHREF        reduce using rule 8 (contents -> CONTENT .)
    $end            reduce using rule 8 (contents -> CONTENT .)


state 10

    (9) link -> OPENHREF . CONTENT CLOSEHREF
    (10) link -> OPENHREF . CONTENT CONTENT CONTENT CLOSEHREF
    (11) link -> OPENHREF . CONTENT CONTENT CLOSEHREF
    (12) link -> OPENHREF . CLOSEHREF

    CONTENT         shift and go to state 12
    CLOSEHREF       shift and go to state 13


state 11

    (3) content_items -> content_item content_items .

    $end            reduce using rule 3 (content_items -> content_item content_items .)


state 12

    (9) link -> OPENHREF CONTENT . CLOSEHREF
    (10) link -> OPENHREF CONTENT . CONTENT CONTENT CLOSEHREF
    (11) link -> OPENHREF CONTENT . CONTENT CLOSEHREF

    CLOSEHREF       shift and go to state 15
    CONTENT         shift and go to state 14


state 13

    (12) link -> OPENHREF CLOSEHREF .

    FIRST           reduce using rule 12 (link -> OPENHREF CLOSEHREF .)
    CONTENT         reduce using rule 12 (link -> OPENHREF CLOSEHREF .)
    OPENHREF        reduce using rule 12 (link -> OPENHREF CLOSEHREF .)
    $end            reduce using rule 12 (link -> OPENHREF CLOSEHREF .)


state 14

    (10) link -> OPENHREF CONTENT CONTENT . CONTENT CLOSEHREF
    (11) link -> OPENHREF CONTENT CONTENT . CLOSEHREF

    CONTENT         shift and go to state 16
    CLOSEHREF       shift and go to state 17


state 15

    (9) link -> OPENHREF CONTENT CLOSEHREF .

    FIRST           reduce using rule 9 (link -> OPENHREF CONTENT CLOSEHREF .)
    CONTENT         reduce using rule 9 (link -> OPENHREF CONTENT CLOSEHREF .)
    OPENHREF        reduce using rule 9 (link -> OPENHREF CONTENT CLOSEHREF .)
    $end            reduce using rule 9 (link -> OPENHREF CONTENT CLOSEHREF .)


state 16

    (10) link -> OPENHREF CONTENT CONTENT CONTENT . CLOSEHREF

    CLOSEHREF       shift and go to state 18


state 17

    (11) link -> OPENHREF CONTENT CONTENT CLOSEHREF .

    FIRST           reduce using rule 11 (link -> OPENHREF CONTENT CONTENT CLOSEHREF .)
    CONTENT         reduce using rule 11 (link -> OPENHREF CONTENT CONTENT CLOSEHREF .)
    OPENHREF        reduce using rule 11 (link -> OPENHREF CONTENT CONTENT CLOSEHREF .)
    $end            reduce using rule 11 (link -> OPENHREF CONTENT CONTENT CLOSEHREF .)


state 18

    (10) link -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF .

    FIRST           reduce using rule 10 (link -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF .)
    CONTENT         reduce using rule 10 (link -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF .)
    OPENHREF        reduce using rule 10 (link -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF .)
    $end            reduce using rule 10 (link -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF .)

